# swagger_output.json
@@ -178,6 +178,51 @@
           }
         ]
       }
+    },
+    "/user/foto-profil/{id}": {
+      "put": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint untuk mengUpdate Foto Profil User",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "file",
+            "type": "file",
+            "in": "formData",
+            "description": "Foto profil user.",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
